# tabularis

src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  export_import_tests.rs  group_tree_tests.rs  lib.rs  models.rs  pool_manager.rs  pool_manager_tests.rs
src-tauri/src/drivers/mysql/: mod.rs  tests.rs
src-tauri/src/drivers/postgres/: binding.rs  client.rs  mod.rs  tests.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/plugins/: driver.rs
src/components/connections/: GroupHeader.tsx
src/components/layout/: ExplorerSidebar.tsx
src/components/layout/sidebar/: SidebarDatabaseItem.tsx  SidebarSchemaItem.tsx
src/components/modals/: NewConnectionModal.tsx
src/components/settings/: InfoTab.tsx
src/config/: links.ts
src/contexts/: DatabaseContext.ts  DatabaseProvider.tsx  SettingsProvider.tsx
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ru.json  zh.json
src/pages/: Connections.tsx
src/types/: connection.ts
src/utils/: connections.ts  credentials.ts  mcpApprovalAttention.ts  sqlAnalysis.ts
tests/utils/: mcpApprovalAttention.test.ts
